--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RoboPage</title>
+	<title>GraceLightFellowship</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-	<h1>Robot Friend</h1>
+	<h1>Wellcome to Grace Light Fellowship</h1>
+	<br>
+	<hr>
 	<div class="robots">
 		<div class="android"> 
 			<div class="head"> 
