--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-	<h1>Wellcome to Grace Light Fellowship</h1>
+	<h1>Wellcom! This is Grace Light Fellowship</h1>
 	<br>
 	<hr>
 	<div class="robots">
